--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -398,11 +398,13 @@ h2, h3 {
     border-radius: 4px;
     width:100%;
 }
-a#menu {
+
+a.menu {
     text-decoration: none;
     color: #333;
     float:left;
 }
+
 .header{
     color: #888;
     text-align: center;
